edits for paradata + service + rocrate standards - openapi spec updated
